# Load_4D_US

./: CMakeLists.txt  README.md
SequenceSegmentation/: SequenceSegmentation.py
SequenceSegmentation/Resources/UI/: main.ui
